--- a/src/app/edition/edition.component.html
+++ b/src/app/edition/edition.component.html
@@ -1,13 +1,15 @@
 <section>
   <form (submit)='save()'>
     <p>titre :</p>
-    <input name="titre" type="text" [(ngModel)]="actu.titre"><br/>
+    <input name="titre" type="text" [(ngModel)]="actu.titre" require><br/>
     <p>alias :</p>
-    <input name="alias" type="text" [(ngModel)]="actu.alias"><br/>
+    <input name="alias" type="text" [(ngModel)]="actu.alias" require><br/>
     <p>description :</p>
-    <input name="description" type="text" [(ngModel)]="actu.description"><br/>
+    <input name="description" type="text" [(ngModel)]="actu.description" require><br/>
     <p>url de l'image :</p>
-    <input name="img" type="text" [(ngModel)]="actu.img"><br/>
+    <input name="img" type="text" [(ngModel)]="actu.img" require><br/>
+    <p>auteur :</p>
+    <input name="auteur" type="text" [(ngModel)]="actu.auteur"><br/>
     <input type="submit" value="Sauvegarder">
   </form>
 </section>
