fin d'apprentissage //ou pas

--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -5,5 +5,5 @@
     <input type="submit" value="S'identifier">
     <input type="reset" value="Annuler">
   </form>
-  <button (click)="conServ.disconnect()" *ngIf="conServ.connecte">déconnection</button>
+  <button (click)="conServ.disconnect()" *ngIf="conServ.connecte">déconnexion</button>
   </section>
