--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
   <ul>
     <li><a href routerLink=''>Accueil</a></li>
     <li><a href routerLink='actualites'>Les nouvelles du jour</a></li>
-    <li><a href routerLink='actualite'>L'actu du jour</a></li>
+    <li *ngIf="conServ.getConnecte()"><a href routerLink='edition'>Edition</a></li>
     <li><a href routerLink='connexion'>Connexion</a></li>
   </ul>
 </section>
